...
      <CustomerTabs.Screen
        name="OrdersTab"
        component={OrdersScreen}
        options={{
          title: 'Orders',
          tabBarIcon: TabOrdersIcon,
          tabBarButtonTestID: 'tab.orders',
        }}
      />
      <CustomerTabs.Screen
        name="FavouritesTab"
        component={FavouritesScreen}
        options={{
...
      <CustomerTabs.Screen
        name="ProfileTab"
        component={ProfileScreen}
        options={{
          title: 'Profile',
          tabBarIcon: TabProfileIcon,
          tabBarButtonTestID: 'tab.profile',
        }}
      />
    </CustomerTabs.Navigator>
  );
}

...
